--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
     "@nestjs/common": "^6.10.11",
     "@nestjs/core": "^6.10.11",
     "@nestjs/microservices": "^6.10.11",
